--- a/res/layout/fragment_purchase_order.xml
+++ b/res/layout/fragment_purchase_order.xml
@@ -41,6 +41,8 @@
                     android:text="describe"
                     android:paddingLeft="5dp"
                     android:layout_weight="3"/>
+                
+        
                 <LinearLayout 
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -71,17 +73,33 @@
                         
                     </LinearLayout>
                     
-                    <FrameLayout 
+                    <LinearLayout 
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:weightSum="3"
+                        android:orientation="vertical">
+                        
+                        <TextView 
+                            android:id="@+id/num"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="num"
+                            android:layout_weight="1"/>
+                        <TextView 
+                            android:id="@+id/price"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="price"
+                            android:layout_weight="1"/>
                         <Button 
                             android:id="@+id/pay"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:text="立即支付"
-                            android:layout_gravity="center"/>
-                    </FrameLayout>
+                            android:layout_gravity="center"
+                            android:layout_weight="1"/>
+                    </LinearLayout>
                 </LinearLayout>
                 
                 
