--- a/res/layout/fragment_page_myaddress_item.xml
+++ b/res/layout/fragment_page_myaddress_item.xml
@@ -36,6 +36,19 @@
             android:text="address"
             android:textColor="@android:color/black"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/default_address"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/name_address"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="5dp"
+            android:text="default"
+            android:textColor="@android:color/holo_red_light"
+            android:textStyle="bold"
+            android:visibility="invisible" />
     </RelativeLayout>
 
 </FrameLayout>
